# theokit-plugins

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.claude/skills/code-quality/: PORTABLE.md  SKILL.md  pyproject.toml  setup.sh
.claude/skills/code-quality/defaults/: languages.txt  thresholds.txt
.claude/skills/code-quality/scripts/: _registry.py  _shared.py  check_symbol_fab.py  cq_invoke.py  run_code_quality.py
.claude/skills/code-quality/templates/: code-quality-report.md
.claude/skills/code-quality/tests/: conftest.py  test_cq_invoke.py  test_go_detector.py  test_orchestrator.py  test_python_detector.py  test_rust_detector.py  test_shared.py  test_skeleton.py  test_symbol_fab.py  test_symbol_fab_parser.py  test_typescript_detector.py
.claude/skills/plan-confidence/: .gitignore  PORTABLE.md  SKILL.md  pyproject.toml  setup.sh
.claude/skills/plan-confidence/defaults/: README.md  clean-code.md  dry.md  loc-limits.md  solid.md  testing.md
.claude/skills/plan-confidence/fixtures/: good-plan.md  missing-coverage-plan.md  no-tdd-plan.md  weak-imperatives-plan.md
.claude/skills/plan-confidence/scripts/: _rubric_loader.py  check_adr_completeness.py  check_architecture_compliance.py  check_baseline_context.py  check_concurrency_tests.py  check_coverage_matrix.py  check_criterion_executability.py  check_drawbacks_section.py  check_evidence_citations.py  check_failure_scenarios.py  check_patterns_consumption.py  check_spec_smells.py  check_tdd_in_bugfix.py  patterns_match.py  run_structural.py
.claude/skills/plan-confidence/templates/: holdout-entry-template.md  plan-confidence-allowlist.example.txt  plan-confidence-golden-rule.example.md  plan-confidence-thresholds.example.txt  rubric-v1.md  score-report-template.md  score-report.schema.json
.claude/skills/plan-confidence/tests/: conftest.py  test_adr_completeness.py  test_adversarial.py  test_architecture_compliance.py  test_audit_findings.py  test_check_baseline_context.py  test_check_concurrency_tests.py  test_check_coverage_matrix.py  test_check_criterion_executability.py  (+19 more)
(+395 files in other folders)
